--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   url_launcher: 6.3.1
   intl: ^0.18.0
+  http: ^0.13.5
+  shared_preferences: ^2.2.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
